--- a/js/localconfig.js.sample
+++ b/js/localconfig.js.sample
@@ -1,5 +1,13 @@
 define(function () {
     return {
-        backend: "/"
+        backend: "/",
+        'shake': {
+            'interval': 500,
+            'period': 20
+        },
+        'wall': {
+            'interval': 500,
+            'count': 5
+        }
     };
 });
