--- a/bower.json
+++ b/bower.json
@@ -1,24 +1,26 @@
 {
-    "name": "wechat-wall",
-    "version": "0.1.0",
-    "homepage": "https://github.com/konder/wechat-wall",
-    "authors": [
-        "konder"
-    ],
-    "license": "private",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "dependencies": {
-        "jquery": "1.11.1",
-        "underscore": "~1.7.0",
-        "underscore.string": "~2.4.0",
-        "socket.io-client": "1.2.1",
-        "requirejs": "~2.1.15",
-        "bootstrap": "~3.3.1"
-    }
+  "name": "wechat-wall",
+  "version": "0.1.0",
+  "homepage": "https://github.com/konder/wechat-wall",
+  "authors": [
+    "konder"
+  ],
+  "license": "private",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "jquery": "1.11.1",
+    "underscore": "~1.7.0",
+    "underscore.string": "~2.4.0",
+    "socket.io-client": "1.2.1",
+    "requirejs": "~2.1.15",
+    "bootstrap": "~3.3.1",
+    "bootstrap-sass-official": "~3.3.1",
+    "font-awesome": "~4.2.0"
+  }
 }
